# shredstream-proxy

./: .gitignore  .goreleaser.yaml  Cargo.toml  data-sample.txt  run-triton-proxy.sh  setup_net.sh
proxy/: Cargo.toml
proxy/src/: forwarder.rs  heartbeat.rs  main.rs  main2.rs  mem.rs  multicast_config.rs  prom.rs  recv_mmsg.rs  triton_forwarder.rs  triton_multicast_config.rs
proxy/src/io_uring/: sendmmsg.rs
scripts/: build-dist.sh
