[workspace]
members = ["examples", "jito_protos", "proxy"]
resolver = "2"

[profile.debug-release]
inherits = "release"
debug = true

[workspace.package]
version = "0.2.12-triton"
description = "Fast path to receive shreds from Jito, forwarding to local consumers. See https://docs.jito.wtf/lowlatencytxnfeed/ for details."
authors = ["Jito Team <team@jito.wtf>"]
homepage = "https://jito.wtf/"
edition = "2021"

[workspace.dependencies]
ahash = "0.8"
arc-swap = "1.6"
bincode = "1.3.3"
borsh = "1.5.3"
bytes = "1.11.0"
clap = { version = "4", features = ["derive", "env"] }
crossbeam-channel = "0.5.8"
dashmap = "5"
env_logger = "0.11"
hostname = "0.4.0"
itertools = "0.14.0"
jito-protos = { path = "jito_protos" }
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4"
mio = "1.1.1"
prost = "0.13"
prost-types = "0.13"
prometheus = "0.14.0"
rand = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
socket2 = "0.6.0"
solana-client = "=2.2.1"
solana-entry = "=2.2.1"
solana-ledger = { git = "https://github.com/jito-foundation/jito-solana.git", branch = "eric/v2.2-merkle-recovery" }
solana-metrics = "=2.2.1"
solana-net-utils = "=2.2.1"
solana-perf = "=2.2.1"
solana-sdk = "=2.2.1"
solana-streamer = "=2.2.1"
thiserror = "2"
tiny_http = "0.12.0"
tokio = "1"
tonic = { version = "0.13", features = ["tls-webpki-roots"] }
tonic-build = "0.13"
tikv-jemallocator = "0.6"

[profile.release]
# thin has minimal overhead vs none (default): https://blog.llvm.org/2016/06/thinlto-scalable-and-incremental-lto.html
lto = "thin"

[profile.dev-release]
inherits = "release"
debug = true